%% ERD 초안 — 원본 multiagent-sns 001_initial.sql 승계 (14 테이블 + schema_version은 마이그레이션 러너 생성)
%% LLM 착지점 3곳: content_item.body · playbook.guidance · analysis_note.body (FR-C4)
%% 002 제안(spec §3.3): run_event에 agent_name·codeact_iteration·llm_cost_usd 추가 — 미확정
erDiagram
    channel {
        uuid id PK
        text platform "instagram|youtube"
        text handle "UNIQUE(platform,handle)"
        text status "active|paused|revoked"
        text mode "auto|hybrid|off (실험변수 FR-E1)"
        bytea token_encrypted "평문 금지 NFR-4"
        int token_key_version
    }
    cycle {
        uuid id PK
        text goal_ref
        text status "planned|running|completed|failed"
        jsonb decision "Growth 변형 선택"
    }
    topic {
        uuid id PK
        text title
        text status "proposed|approved|rejected|used"
    }
    topic_stats {
        uuid id PK
        uuid topic_id FK
        text format "UNIQUE(topic,format,platform)"
        text platform
        int trials "밴딧 입력"
        float reward_sum
    }
    content_item {
        uuid id PK
        uuid cycle_id FK
        uuid topic_id FK
        text format "feed_image|reels|shorts"
        text status "draft|needs_review|approved|rejected"
        text hook_pattern "FR-G5 5종"
        text body "LLM 착지점 1/3"
        jsonb media_spec
        bool edited_by_human "hybrid FR-E3"
    }
    media_asset {
        uuid id PK
        uuid content_item_id FK
        text kind "image|video|thumbnail|audio"
        text storage_url
        text checksum "결정론 렌더 증빙"
        text quality_status "passed|failed|needs_review"
    }
    publication {
        uuid id PK
        uuid content_item_id FK "UNIQUE(content,channel)"
        uuid channel_id FK
        text status "pending|published|failed|skipped"
        text external_post_id
    }
    publish_attempt {
        uuid id PK
        uuid publication_id FK "UNIQUE 1-1 멱등 상태머신"
        text state "pending|container_created|published|failed"
        text container_id "IG 2단계 재시작 재사용"
        text error_class "auth|quota|spam_block|transient|permanent_unknown"
    }
    metric_observation {
        uuid id PK
        uuid publication_id FK
        int window_index "0=6h 1=24h 2=72h 3+=일1회"
    }
    metric_value {
        uuid id PK
        uuid observation_id FK
        text metric_key
        float value "결측=NULL"
        bool missing "XOR CHECK NFR-3"
    }
    reward {
        uuid id PK
        uuid publication_id FK "UNIQUE 0..1"
        float reward_value "NULL=학습 제외"
        text formula_version
    }
    playbook {
        uuid id PK
        text scope "global|platform|format|topic"
        int version "UNIQUE(scope,ref,version)"
        text guidance "LLM 착지점 2/3"
    }
    analysis_note {
        uuid id PK
        uuid cycle_id FK
        text body "LLM 착지점 3/3 정직귀인"
        bool insufficient_evidence
    }
    run_event {
        uuid id PK
        uuid cycle_id FK
        text kind "9종 append-only"
        jsonb payload
        numeric cost_usd "FR-O3 비용 관측"
    }

    topic ||--o{ topic_stats : "성과 집계"
    topic ||--o{ content_item : "주제"
    cycle ||--o{ content_item : "사이클 산출"
    content_item ||--o{ media_asset : "렌더 산출"
    content_item ||--o{ publication : "채널별 발행"
    channel ||--o{ publication : "발행 대상"
    publication ||--|| publish_attempt : "멱등 1-1"
    publication ||--o{ metric_observation : "지표 창"
    metric_observation ||--o{ metric_value : "지표 값"
    publication |o--|| reward : "0..1 보상"
    cycle ||--o{ analysis_note : "분석글"
    cycle ||--o{ run_event : "이벤트 로그"
